--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,17 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>PINg</title>
+    <style>
+      body {
+        margin: 0;
+      }
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+    </style>
+    <style>
+      @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
